--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ isort==5.7.0
 lazy-object-proxy==1.4.3
 mccabe==0.6.1
 oauthlib==3.1.0
+psycopg2==2.8.6
 pycodestyle==2.6.0
 pycparser==2.20
 PyJWT==2.0.1
